1.21 updates