@@ -1,37 +1,39 @@
 package net.minelink.ctplus.nms;
 
+import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Multimap;
 import com.mojang.datafixers.util.Pair;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.NbtIo;
-import net.minecraft.network.protocol.Packet;
-import net.minecraft.network.protocol.game.ClientboundAddPlayerPacket;
-import net.minecraft.network.protocol.game.ClientboundPlayerInfoPacket;
-import net.minecraft.network.protocol.game.ClientboundRotateHeadPacket;
-import net.minecraft.network.protocol.game.ClientboundSetEquipmentPacket;
+import net.minecraft.core.Holder;
+import net.minecraft.nbt.*;
+import net.minecraft.network.protocol.game.*;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.server.network.ServerGamePacketListenerImpl;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.EquipmentSlot;
-import net.minecraft.world.food.FoodData;
+import net.minecraft.world.entity.ai.attributes.Attribute;
+import net.minecraft.world.entity.ai.attributes.AttributeMap;
+import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.PlayerDataStorage;
+import net.minecraft.world.phys.Vec3;
 import net.minelink.ctplus.compat.base.NpcIdentity;
 import net.minelink.ctplus.compat.base.NpcPlayerHelper;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
-import org.bukkit.craftbukkit.v1_18_R2.CraftWorld;
-import org.bukkit.craftbukkit.v1_18_R2.entity.CraftPlayer;
+import org.bukkit.craftbukkit.CraftWorld;
+import org.bukkit.craftbukkit.entity.CraftPlayer;
 import org.bukkit.entity.Player;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.lang.reflect.Field;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     @Override
@@ -43,32 +45,39 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         Location location = player.getLocation();
 
         npcPlayer.setPos(location.getX(), location.getY(), location.getZ());
-        npcPlayer.setXRot(location.getYaw());
-        npcPlayer.setYRot(location.getPitch());
+        npcPlayer.setXRot(location.getPitch());
+        npcPlayer.setYRot(location.getYaw());
+        npcPlayer.setYHeadRot(location.getYaw());
 
         npcPlayer.getBukkitEntity().setNoDamageTicks(0);
 
-        worldServer.entityManager.getEntityGetter().get(player.getUniqueId()).remove(Entity.RemovalReason.DISCARDED);
+        // Cast the player to the CraftPlayer to access NMS methods
+        ServerPlayer nmsPlayer = ((CraftPlayer) player).getHandle();
+
+        // Remove the player entity with the appropriate removal reason
+        nmsPlayer.remove(Entity.RemovalReason.DISCARDED);
+
         worldServer.addNewPlayer(npcPlayer);
-        showAll(npcPlayer, location);
+        showAll(npcPlayer);
 
         return npcPlayer.getBukkitEntity();
     }
 
-    public static void showAll(ServerPlayer entityPlayer, Location location) {
-        ClientboundPlayerInfoPacket playerInfoAdd = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.ADD_PLAYER);
-        ClientboundAddPlayerPacket namedEntitySpawn = new ClientboundAddPlayerPacket(entityPlayer);
-        ClientboundRotateHeadPacket headRotation = new ClientboundRotateHeadPacket(entityPlayer, (byte) ((location.getYaw() * 256f) / 360f));
-        ClientboundPlayerInfoPacket playerInfoRemove = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.REMOVE_PLAYER);
+    public static void showAll(ServerPlayer entityPlayer) {
+        ClientboundPlayerInfoUpdatePacket playerInfoAdd = new ClientboundPlayerInfoUpdatePacket(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, entityPlayer);
+        ClientboundAddEntityPacket namedEntitySpawn = new ClientboundAddEntityPacket(entityPlayer.getId(),
+                entityPlayer.getUUID(), entityPlayer.getX(), entityPlayer.getY(), entityPlayer.getZ(),
+                ((entityPlayer.getXRot() * 256f) / 360f), ((entityPlayer.getYRot() * 256f) / 360f), EntityType.PLAYER, 0, Vec3.ZERO, ((entityPlayer.getYRot() * 256f) / 360f));
+        ClientboundRotateHeadPacket headRotation = new ClientboundRotateHeadPacket(entityPlayer, (byte) ((entityPlayer.getYRot() * 256f) / 360f));
+        ClientboundPlayerInfoRemovePacket playerInfoRemove = new ClientboundPlayerInfoRemovePacket(Collections.singletonList(entityPlayer.getUUID()));
+
         for (Player player : Bukkit.getOnlinePlayers()) {
             ServerGamePacketListenerImpl connection = ((CraftPlayer) player).getHandle().connection;
             connection.send(playerInfoAdd);
             connection.send(namedEntitySpawn);
-            connection.send(headRotation);
-            connection.send(playerInfoRemove);
+            //connection.send(headRotation);
+            //connection.send(playerInfoRemove);
         }
-        entityPlayer.getEntityData().
-                set(net.minecraft.world.entity.player.Player.DATA_PLAYER_MODE_CUSTOMISATION, (byte) 0xFF);
     }
 
     @Override
@@ -78,17 +87,10 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
             throw new IllegalArgumentException();
         }
 
-        for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
-            if (serverPlayer instanceof NpcPlayer) continue;
-
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.REMOVE_PLAYER, entity);
-            serverPlayer.connection.send(packet);
-        }
-
-        ServerLevel worldServer = entity.getLevel();
+        removePlayerList(player);
+        ServerLevel worldServer = ((CraftWorld) player.getWorld()).getHandle();
         worldServer.chunkSource.removeEntity(entity);
         worldServer.getPlayers(serverPlayer -> serverPlayer instanceof NpcPlayer).remove(entity);
-        removePlayerList(player);
     }
 
     @Override
@@ -110,23 +112,22 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         ServerPlayer entity = ((CraftPlayer) player).getHandle();
 
         if (!(entity instanceof NpcPlayer)) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("Entity is not an instance of NpcPlayer.");
         }
+        AttributeMap attributeMap = entity.getAttributes();
 
         for (EquipmentSlot slot : EquipmentSlot.values()) {
             ItemStack item = entity.getItemBySlot(slot);
+
             if (item == null) continue;
-
-            // Set the attribute for this equipment to consider armor values and enchantments
-            // Actually getAttributeMap().a() is used with the previous item, to clear the Attributes
-            entity.getAttributes().removeAttributeModifiers(item.getAttributeModifiers(slot));
-            entity.getAttributes().addTransientAttributeModifiers(item.getAttributeModifiers(slot));
-
-            // This is also called by super.tick(), but the flag this.bx is not public
-            List<Pair<EquipmentSlot, ItemStack>> list = Lists.newArrayList();
-            list.add(Pair.of(slot, item));
-            Packet packet = new ClientboundSetEquipmentPacket(entity.getId(), list);
-            entity.getLevel().chunkSource.broadcast(entity, packet);
+            Multimap<Holder<Attribute>, AttributeModifier> attributeModifiers = ArrayListMultimap.create();
+            item.forEachModifier(slot, attributeModifiers::put);
+            attributeMap.removeAttributeModifiers(attributeModifiers);
+            attributeMap.addTransientAttributeModifiers(attributeModifiers);
+            List<Pair<EquipmentSlot, ItemStack>> equipmentList = Lists.newArrayList();
+            equipmentList.add(Pair.of(slot, item));
+            ClientboundSetEquipmentPacket packet = new ClientboundSetEquipmentPacket(entity.getId(), equipmentList);
+            ((CraftWorld) player.getWorld()).getHandle().getChunkSource().broadcast(entity, packet);
         }
     }
 
@@ -134,44 +135,57 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     public void syncOffline(Player player) {
         ServerPlayer entity = ((CraftPlayer) player).getHandle();
 
-        if (!(entity instanceof NpcPlayer)) {
+        if (!(entity instanceof NpcPlayer npcPlayer)) {
             throw new IllegalArgumentException();
         }
 
-        NpcPlayer npcPlayer = (NpcPlayer) entity;
         NpcIdentity identity = npcPlayer.getNpcIdentity();
         Player p = Bukkit.getPlayer(identity.getId());
         if (p != null && p.isOnline()) return;
 
-        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().get(0)).getHandle().getServer().playerDataStorage;
-        CompoundTag playerNbt = worldStorage.getPlayerData(identity.getId().toString());
-        if (playerNbt == null) return;
+        PlayerDataStorage worldStorage = ((CraftWorld) Bukkit.getWorlds().getFirst()).getHandle().getServer().playerDataStorage;
+        Optional<CompoundTag> playerNbtOptional = worldStorage.load(entity);
+        if (playerNbtOptional.isEmpty()) return;
 
-        // foodTickTimer is now private in 1.8.3 -- still private in 1.12
-        Field foodTickTimerField;
-        int foodTickTimer;
+        CompoundTag playerNbt = playerNbtOptional.get();
 
-        try {
-            //Although we can use Mojang mappings when developing, We need to use the obfuscated field name
-            //until we can run a full Mojmapped server. I personally used this site when updating to 1.18:
-            //https://nms.screamingsandals.org/1.18.1/net/minecraft/world/food/FoodData.html
-            foodTickTimerField = FoodData.class.getDeclaredField("d");
-            foodTickTimerField.setAccessible(true);
-            foodTickTimer = foodTickTimerField.getInt(entity.getFoodData());
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
+        //Field foodTickTimerField;
+        //int foodTickTimer;
 
-        playerNbt.putShort("Air", (short) entity.getAirSupply());
-        // Health is now just a float; fractional is not stored separately. (1.12)
+        //try {
+        //    foodTickTimerField = FoodData.class.getDeclaredField("d");
+        //    foodTickTimerField.setAccessible(true);
+        //    foodTickTimer = foodTickTimerField.getInt(entity.getFoodData());
+        //} catch (NoSuchFieldException | IllegalAccessException e) {
+        //    throw new RuntimeException(e);
+        //}
+
+        playerNbt.putShort("Air", (short) npcPlayer.getAirSupply());
         playerNbt.putFloat("Health", entity.getHealth());
         playerNbt.putFloat("AbsorptionAmount", entity.getAbsorptionAmount());
         playerNbt.putInt("XpTotal", entity.experienceLevel);
         playerNbt.putInt("foodLevel", entity.getFoodData().getFoodLevel());
-        playerNbt.putInt("foodTickTimer", foodTickTimer);
+        //playerNbt.putInt("foodTickTimer", foodTickTimer);
         playerNbt.putFloat("foodSaturationLevel", entity.getFoodData().getSaturationLevel());
         playerNbt.putFloat("foodExhaustionLevel", entity.getFoodData().exhaustionLevel);
-        playerNbt.putShort("Fire", (short) entity.remainingFireTicks);
+        playerNbt.putInt("Fire", entity.getRemainingFireTicks());
+
+        // Add Position and Rotation
+        ListTag position = new ListTag();
+        position.add(DoubleTag.valueOf(entity.position().x));
+        position.add(DoubleTag.valueOf(entity.position().y));
+        position.add(DoubleTag.valueOf(entity.position().z));
+        playerNbt.put("Pos", position);
+
+        ListTag rotation = new ListTag();
+        rotation.add(FloatTag.valueOf(entity.getYRot())); // Yaw
+        rotation.add(FloatTag.valueOf(entity.getXRot())); // Pitch
+        playerNbt.put("Rotation", rotation);
+
+        // Dimension
+        playerNbt.putString("Dimension", entity.level().dimension().location().toString());
+
+        // Inventory
         playerNbt.put("Inventory", npcPlayer.getInventory().save(new ListTag()));
 
         File file1 = new File(worldStorage.getPlayerDir(), identity.getId().toString() + ".dat.tmp");
@@ -193,8 +207,8 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
         ServerPlayer p = ((CraftPlayer) player).getHandle();
 
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(
-                    ClientboundPlayerInfoPacket.Action.ADD_PLAYER, serverPlayer);
+            ClientboundPlayerInfoUpdatePacket packet = new ClientboundPlayerInfoUpdatePacket(
+                    ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, serverPlayer);
             p.connection.send(packet);
         }
     }
@@ -203,7 +217,7 @@ public class NpcPlayerHelperImpl implements NpcPlayerHelper {
     public void removePlayerList(Player player) {
         ServerPlayer p = ((CraftPlayer) player).getHandle();
         for (ServerPlayer serverPlayer : MinecraftServer.getServer().getPlayerList().getPlayers()) {
-            ClientboundPlayerInfoPacket packet = new ClientboundPlayerInfoPacket(ClientboundPlayerInfoPacket.Action.REMOVE_PLAYER, serverPlayer);
+            ClientboundPlayerInfoRemovePacket packet = new ClientboundPlayerInfoRemovePacket(Collections.singletonList(serverPlayer.getUUID()));
             p.connection.send(packet);
         }
     }
